--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="Keywords" content="Horario, Links, Zoom, UC">
         <meta name="Description" content="">
         <link rel="Shortcut Icon" href="https://portal.uc.cl/Theme_LuminisUC/Theme_UC/images/liferay.ico">
-        <title>LINKS CLASES ZOOM</title>
+        <title id="title">LINKS CLASES ZOOM</title>
 
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="css/text.css" type="text/css">
@@ -24,42 +24,46 @@
 		        left: 1em;}
         </style>
 
+		<script type="text/javascript" src="script.js"></script>
+
     </head>
     <body>
-            <div class="box dashed center-text auto-size cian-border">
-            <h1 class="uppercase space-text">python for change</h1>
-            <h2 class="capitalize">natural quantum script</h2>
-            
-        </div>
-	<ul class="navbar">
-		<li>
-			<a href="https://zoom.us/j/92188299644">Cálculo</a>
-			<ul>
-				<li><a href="https://zoom.us/j/97616615245?pwd=ejVtWmVwVENDOCtlbXFUdUhYRkZyZz09">Ayudantía Cálculo</a></li>
-				<li><a href="https://us02web.zoom.us/j/83418878224?pwd=b3NTY2RXbWR2VlRiWUErVFk2RFI3dz09">LAB Cálculo</a></li>
-			</ul>
-		</li>
-		<li>
-			<a href="https://zoom.us/j/98280368311?pwd=MXdGT0YvVUFGbTdSZWV6bDNWRGxmZz09">Lineal</a>
-			<ul>
-				<li><a href="https://zoom.us/j/9131664340">Ayudantía Lineal</a></li>
-				<li><a href="https://zoom.us/j/2967155110?pwd=Nm9CdHd3WUFidU1TTmZ6aFMvcmxzZz09">LAB Lineal</a></li>
-			</ul>
-		</li>
-		<li>
-			<a href="https://zoom.us/j/96480800707">Desafíos</a>
-			<ul>
-				<li><a href="https://cursos.canvas.uc.cl/courses/sis_course_id:202120-11506-ING1004-8">Ayudantía Desafíos</a></li>
-			</ul>
-		</li>
-		<li>
-			<a href="https://cursos.canvas.uc.cl/courses/28080/external_tools/1102">Química</a>
-			<ul>
-				<li><a href="https://zoom.us/j/97179690095?pwd=Zk1XUEpoVkxWK214ZE5sWVdtN0tlQT09">Nivelación Química</a></li>
-			</ul>
-		</li>
-		<li><a href="https://zoom.us/j/91488020282?uname=user">Let</a></li>
-	</ul>
-	<img src="HorarioUC.jpg" width="642" height="312" border="0" alt=""><br>
- </body>
+
+<noscript>
+    Por favor active Javascript en su navegador.
+</nocript>
+
+<ul class="navbar">
+	<li>
+		<a href="https://zoom.us/j/92188299644">Cálculo</a>
+		<ul>
+			<li><a href="https://zoom.us/j/97616615245?pwd=ejVtWmVwVENDOCtlbXFUdUhYRkZyZz09">Ayudantía Cálculo</a></li>
+			<li><a href="https://us02web.zoom.us/j/83418878224?pwd=b3NTY2RXbWR2VlRiWUErVFk2RFI3dz09">LAB Cálculo</a></li>
+		</ul>
+	</li>
+	<li>
+		<a href="https://zoom.us/j/98280368311?pwd=MXdGT0YvVUFGbTdSZWV6bDNWRGxmZz09">Lineal</a>
+		<ul>
+			<li><a href="https://zoom.us/j/9131664340">Ayudantía Lineal</a></li>
+			<li><a href="https://zoom.us/j/2967155110?pwd=Nm9CdHd3WUFidU1TTmZ6aFMvcmxzZz09">LAB Lineal</a></li>
+		</ul>
+	</li>
+	<li>
+		<a href="https://zoom.us/j/96480800707">Desafíos</a>
+		<ul>
+			<li><a href="https://cursos.canvas.uc.cl/courses/sis_course_id:202120-11506-ING1004-8">Ayudantía Desafíos</a></li>
+		</ul>
+	</li>
+	<li>
+		<a href="https://cursos.canvas.uc.cl/courses/28080/external_tools/1102">Química</a>
+		<ul>
+			<li><a href="https://zoom.us/j/97179690095?pwd=Zk1XUEpoVkxWK214ZE5sWVdtN0tlQT09">Nivelación Química</a></li>
+		</ul>
+	</li>
+	<li><a href="https://zoom.us/j/91488020282?uname=user">Let</a></li>
+</ul>
+
+<img id="image" src="demo/HorarioUC.jpg" width="642" height="312" border="0" alt=""><br>
+
+ 	</body>
 </html>
