Explicar el uso de miHorarioUC

--- a/template.html
+++ b/template.html
@@ -7,7 +7,7 @@
         <meta name="Keywords" content="Horario, Links, Zoom, UC">
         <meta name="Description" content="">
         <link rel="Shortcut Icon" href="https://portal.uc.cl/Theme_LuminisUC/Theme_UC/images/liferay.ico">
-        <title id="title">LINKS CLASES ZOOM</title>
+        <title id="title">miHorario</title>
 
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="css/text.css" type="text/css">
@@ -31,7 +31,7 @@
 $egg ramos
 </ul>
 
-<img id="image" src="demo/HorarioUC.jpg" width="642" height="312" border="0" alt=""><br>
+<img id="image" src="miHorario.jpg" width="642" height="312" border="0" alt=""><br>
 
  	</body>
 </html>
